--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
-
+    <div class="container">
+      <input class="date-picker" type="text" id="datetime-picker" />
+      <button class="button start" type="button" data-start>Start</button>
+      <button class="button reset" type="button" data-reset>Reset</button>
+    </div>
     <div class="timer">
       <div class="field">
         <span class="value" data-days>00</span>
