--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -7,31 +7,32 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
-    <div class="container">
-      <input class="date-picker" type="text" id="datetime-picker" />
-      <button class="button start" type="button" data-start>Start</button>
-      <button class="button reset" type="button" data-reset>Reset</button>
-    </div>
-    <div class="timer">
-      <div class="field">
-        <span class="value" data-days>00</span>
-        <span class="label">Days</span>
+    <section class="main">
+      <p><a href="index.html">Go back</a></p>
+      <div class="container">
+        <input class="date-picker" type="text" id="datetime-picker" />
+        <button class="button start" type="button" data-start>Start</button>
+        <button class="button reset" type="button" data-reset>Reset</button>
       </div>
-      <div class="field">
-        <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
+      <div class="timer">
+        <div class="field">
+          <span class="value" data-days>00</span>
+          <span class="label">Days</span>
+        </div>
+        <div class="field">
+          <span class="value" data-hours>00</span>
+          <span class="label">Hours</span>
+        </div>
+        <div class="field">
+          <span class="value" data-minutes>00</span>
+          <span class="label">Minutes</span>
+        </div>
+        <div class="field">
+          <span class="value" data-seconds>00</span>
+          <span class="label">Seconds</span>
+        </div>
       </div>
-      <div class="field">
-        <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
-      </div>
-      <div class="field">
-        <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
-      </div>
-    </div>
-
+    </section>
     <script src="js/02-timer.js"></script>
   </body>
 </html>
